[project]
name = "mcpagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.6.2",
    "aiomysql>=0.2.0",
    "anthropic>=0.54.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "groq>=0.28.0",
    "mcp>=1.9.4",
    "mcp-sql-server>=0.1.0",
    "openai>=1.86.0",
    "streamlit>=1.45.1",
]
